# message_blaster

./: .envrc.example  .gitignore  Makefile  README.md  agent.md  docker-compose.yaml  mix.exs  pyproject.toml
.localstack/cache/: machine.json
config/: config.exs
connectors/: sqs-sink.json
lib/: message_blaster.ex
lib/message_blaster/: application.ex  avro_generator.ex  producer.ex  schema_loader.ex  schema_registry_client.ex
lib/message_blaster/publisher/: sqs_publisher.ex
lib/mix/tasks/: mb.rate.ex  mb.sqs.create.ex  mb.start.ex  mb.stop.ex
schemas/: card_listing.avsc  card_offer.avsc  card_sale.avsc  pokemon_card.avsc
scripts/: sqs_consumer.py
test/: message_blaster_test.exs
