[tool.poetry]
name = "message-blaster-consumer"
version = "0.1.0"
description = "LocalStack SQS consumer for Message Blaster"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
boto3 = "^1.34"

[tool.poetry.group.dev.dependencies]
# Add dev-only deps here if needed

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
